test/fixtures/build-output-swift-errors.txt
Command line invocation:
    /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild -scheme MyApp -configuration Debug build

User defaults from command line:
    IDEPackageSupportUseBuiltinSCM = YES

note: Building targets in dependency order
note: Target dependency graph (1 target)

SwiftDriver\ Compilation\ Requirements MyApp normal arm64 com.apple.xcode.tools.swift.compiler (in target 'MyApp' from project 'MyApp')
    cd /Users/dev/MyApp
    builtin-Swift-Compilation-Requirements -- ...

/Users/dev/MyApp/Sources/ContentView.swift:42:15: error: cannot convert value of type 'String' to expected argument type 'Int'
        calculate(value)
                  ^~~~~

/Users/dev/MyApp/Sources/ContentView.swift:42:15: error: cannot convert value of type 'String' to expected argument type 'Int'
        calculate(value)
                  ^~~~~

/Users/dev/MyApp/Sources/AppDelegate.swift:18:9: error: value of type 'NSApplication' has no member 'foo'
        NSApplication.shared.foo()
        ^~~~~~~~~~~~~~~~~~~~~ ~~~

SwiftDriver\ Compilation MyApp normal arm64 com.apple.xcode.tools.swift.compiler (in target 'MyApp' from project 'MyApp')
    cd /Users/dev/MyApp
    builtin-Swift-Compilation -- /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc ...

/Users/dev/MyApp/Sources/ContentView.swift:42:15: error: cannot convert value of type 'String' to expected argument type 'Int'
        calculate(value)
                  ^~~~~

/Users/dev/MyApp/Sources/AppDelegate.swift:18:9: error: value of type 'NSApplication' has no member 'foo'
        NSApplication.shared.foo()
        ^~~~~~~~~~~~~~~~~~~~~ ~~~

** BUILD FAILED **
